--- a/public/index.html
+++ b/public/index.html
@@ -1,238 +1,275 @@
-  <html><head><base href="https://example.com/clippychat/">
-  <title>ClippyChat - Windows 98 Style</title>
-  <link rel="stylesheet" href="https://unpkg.com/98.css">
-  <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
-  <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-      overflow: hidden;
-      font-family: "Pixelated MS Sans Serif", Arial;
-    }
-    #chatContainer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      padding: 10px;
-      background-color: #c0c0c0;
-      border-top: 2px solid #fff;
-      box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
-    }
-    #chatInput {
-      width: calc(100% - 80px);
-      margin-right: 10px;
-    }
-    .clippy {
-      position: absolute;
-      cursor: move;
-    }
-    .speech-bubble {
-      position: absolute;
-      background: #fff;
-      border: 2px solid #000;
-      border-radius: 10px;
-      padding: 10px;
-      max-width: 200px;
-      z-index: 1000;
-    }
-    .speech-bubble:after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      width: 0;
-      height: 0;
-      border: 20px solid transparent;
-      border-top-color: #fff;
-      border-bottom: 0;
-      margin-left: -20px;
-      margin-bottom: -20px;
-    }
-    .name-tag {
-      position: absolute;
-      background: #000080;
-      color: #fff;
-      padding: 2px 5px;
-      border-radius: 3px;
-      font-size: 12px;
-      z-index: 1001;
-    }
-  </style>
-  </head>
-  <body>
-  <div id="loginWindow" class="window" style="width: 300px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-    <div class="title-bar">
-      <div class="title-bar-text">Login to ClippyChat</div>
+<html><head>
+<title>ClippyChat - Mobile 98 Style</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<link rel="stylesheet" href="https://unpkg.com/98.css">
+<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
+<style>
+  body, html {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+    font-family: "Pixelated MS Sans Serif", Arial;
+    touch-action: none;
+    background-color: #008080;
+  }
+  #chatContainer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    background-color: #c0c0c0;
+    border-top: 2px solid #fff;
+    box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
+  }
+  #chatInput {
+    width: calc(100% - 80px);
+    margin-right: 10px;
+  }
+  .clippy {
+    position: absolute;
+    touch-action: none;
+  }
+  .speech-bubble {
+    position: absolute;
+    background: #fff;
+    border: 2px solid #000;
+    border-radius: 10px;
+    padding: 10px;
+    max-width: 200px;
+    z-index: 1000;
+    touch-action: none;
+  }
+  .speech-bubble:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-top-color: #fff;
+    border-bottom: 0;
+    margin-left: -20px;
+    margin-bottom: -20px;
+  }
+  .name-tag {
+    position: absolute;
+    background: #000080;
+    color: #fff;
+    padding: 2px 5px;
+    border-radius: 3px;
+    font-size: 12px;
+    z-index: 1001;
+    touch-action: none;
+  }
+</style>
+</head>
+<body>
+<div id="loginWindow" class="window" style="width: 90%; max-width: 300px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+  <div class="title-bar">
+    <div class="title-bar-text">Login to ClippyChat</div>
+  </div>
+  <div class="window-body">
+    <p>Enter your nickname and room ID to join:</p>
+    <div class="field-row">
+      <label for="nickname">Nickname:</label>
+      <input id="nickname" type="text">
     </div>
-    <div class="window-body">
-      <p>Enter your nickname and room ID to join:</p>
-      <div class="field-row">
-        <label for="nickname">Nickname:</label>
-        <input id="nickname" type="text">
-      </div>
-      <div class="field-row">
-        <label for="roomId">Room ID:</label>
-        <input id="roomId" type="text">
-      </div>
-      <div class="field-row" style="justify-content: flex-end;">
-        <button id="loginButton">Join Chat</button>
-      </div>
+    <div class="field-row">
+      <label for="roomId">Room ID:</label>
+      <input id="roomId" type="text" value="default">
+    </div>
+    <div class="field-row" style="justify-content: flex-end;">
+      <button id="loginButton">Join Chat</button>
     </div>
   </div>
+</div>
 
-  <div id="chatContainer" style="display: none;">
-    <input type="text" id="chatInput" class="input">
-    <button id="sendButton">Send</button>
-  </div>
+<div id="chatContainer" style="display: none;">
+  <input type="text" id="chatInput" class="input">
+  <button id="sendButton">Send</button>
+</div>
 
-  <script>
-  const socket = io();
-  let clippyInstances = {};
-  let currentUser = '';
-  let currentRoom = '';
-  let stage;
+<script>
+const socket = io();
+let clippyInstances = {};
+let currentUser = '';
+let currentRoom = '';
+let stage;
 
-  function randomPosition() {
-    return {
-      x: Math.random() * (window.innerWidth - 124),
-      y: Math.random() * (window.innerHeight - 93 - 50)
-    };
-  }
+function randomPosition() {
+  return {
+    x: Math.random() * (window.innerWidth - 124),
+    y: Math.random() * (window.innerHeight - 93 - 50)
+  };
+}
 
-  function createClippy(user, position) {
-    const spriteSheet = new createjs.SpriteSheet({
-      images: ["https://bonziworld.org/img/agents/clippy.png"],
-      frames: {width: 124, height: 93},
-      animations: {
-        idle: 0,
-        enter: {
-          frames: [410, 411, 412, 413, 414, 415, 416, 0],
-          next: "idle"
-        },
-        leave: {
-          frames: [0, 364, 365, 366, 367, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377, 378, 379, 380, 381, 382, 383, 384, 385, 386, 387, 388, 389, 390, 391, 392, 393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411],
-          next: false
-        }
+function createClippy(user, position) {
+  const spriteSheet = new createjs.SpriteSheet({
+    images: ["https://bonziworld.org/img/agents/clippy.png"],
+    frames: {width: 124, height: 93},
+    animations: {
+      idle: 0,
+      enter: {
+        frames: [410, 411, 412, 413, 414, 415, 416, 0],
+        next: "idle"
+      },
+      leave: {
+        frames: [0, 364, 365, 366, 367, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377, 378, 379, 380, 381, 382, 383, 384, 385, 386, 387, 388, 389, 390, 391, 392, 393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411],
+        next: false
       }
-    });
-
-    const clippy = new createjs.Sprite(spriteSheet, "idle");
-    clippy.x = position.x;
-    clippy.y = position.y;
-
-    const nameTag = document.createElement('div');
-    nameTag.className = 'name-tag';
-    nameTag.textContent = user;
-    nameTag.style.left = `${position.x}px`;
-    nameTag.style.top = `${position.y - 20}px`;
-    document.body.appendChild(nameTag);
-
-    const speechBubble = document.createElement('div');
-    speechBubble.className = 'speech-bubble';
-    speechBubble.style.display = 'none';
-    document.body.appendChild(speechBubble);
-
-    clippy.on('pressmove', function(evt) {
-      clippy.x = evt.stageX;
-      clippy.y = evt.stageY;
-      nameTag.style.left = `${evt.stageX}px`;
-      nameTag.style.top = `${evt.stageY - 20}px`;
-      updateSpeechBubblePosition();
-    });
-
-    function updateSpeechBubblePosition() {
-      speechBubble.style.left = `${clippy.x - 100}px`;
-      speechBubble.style.top = `${clippy.y - 150}px`;
     }
+  });
 
-    function speak(text) {
-      speechBubble.textContent = text;
-      speechBubble.style.display = 'block';
-      updateSpeechBubblePosition();
-      setTimeout(() => {
-        speechBubble.style.display = 'none';
-      }, 3000);
+  const clippy = new createjs.Sprite(spriteSheet, "idle");
+  clippy.x = position.x;
+  clippy.y = position.y;
 
-      const url = `https://www.tetyys.com/SAPI4/SAPI4?text=${encodeURIComponent(text)}&voice=${encodeURIComponent("Adult Male #2, American English (TruVoice)")}&pitch=140&speed=157`;
-      const audio = new Audio(url);
-      audio.play();
-    }
+  const nameTag = document.createElement('div');
+  nameTag.className = 'name-tag';
+  nameTag.textContent = user;
+  nameTag.style.left = `${position.x}px`;
+  nameTag.style.top = `${position.y - 20}px`;
+  document.body.appendChild(nameTag);
 
-    stage.addChild(clippy);
+  const speechBubble = document.createElement('div');
+  speechBubble.className = 'speech-bubble';
+  speechBubble.style.display = 'none';
+  document.body.appendChild(speechBubble);
 
-    return {
-      clippy,
-      nameTag,
-      speechBubble,
-      speak,
-      updateSpeechBubblePosition
-    };
+  function updateSpeechBubblePosition() {
+    speechBubble.style.left = `${clippy.x - 100}px`;
+    speechBubble.style.top = `${clippy.y - 150}px`;
   }
 
-  document.getElementById('loginButton').addEventListener('click', () => {
-    currentUser = document.getElementById('nickname').value;
-    currentRoom = document.getElementById('roomId').value;
-    if (currentUser && currentRoom) {
-      socket.emit('join', { user: currentUser, room: currentRoom });
-      document.getElementById('loginWindow').style.display = 'none';
-      document.getElementById('chatContainer').style.display = 'flex';
-      const canvas = document.createElement('canvas');
-      canvas.id = 'clippyCanvas';
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight - 50;
-      document.body.insertBefore(canvas, document.body.firstChild);
-      stage = new createjs.Stage("clippyCanvas");
-      createjs.Ticker.framerate = 30;
-      createjs.Ticker.addEventListener("tick", stage);
-    }
-  });
+  function speak(text) {
+    speechBubble.textContent = text;
+    speechBubble.style.display = 'block';
+    updateSpeechBubblePosition();
+    setTimeout(() => {
+      speechBubble.style.display = 'none';
+    }, 3000);
 
-  socket.on('join', (user) => {
-    const position = randomPosition();
-    clippyInstances[user] = createClippy(user, position);
-    clippyInstances[user].clippy.gotoAndPlay("enter");
-  });
+    const url = `https://www.tetyys.com/SAPI4/SAPI4?text=${encodeURIComponent(text)}&voice=${encodeURIComponent("Adult Male #2, American English (TruVoice)")}&pitch=140&speed=157`;
+    const audio = new Audio(url);
+    audio.play();
+  }
 
-  socket.on('leave', (id) => {
-    if (clippyInstances[id]) {
-      clippyInstances[id].clippy.gotoAndPlay("leave");
-      clippyInstances[id].clippy.on("animationend", function() {
-        stage.removeChild(clippyInstances[id].clippy);
-        clippyInstances[id].nameTag.remove();
-        clippyInstances[id].speechBubble.remove();
-        delete clippyInstances[id];
-      });
-    }
-  });
+  let isDragging = false;
+  let startX, startY;
 
-  socket.on('talk', (data) => {
-    if (clippyInstances[data.user]) {
-      clippyInstances[data.user].speak(data.text);
-    }
-  });
+  clippy.on('mousedown', startDrag);
+  clippy.on('pressmove', drag);
+  clippy.on('pressup', endDrag);
 
-  document.getElementById('sendButton').addEventListener('click', sendMessage);
-  document.getElementById('chatInput').addEventListener('keypress', (e) => {
-    if (e.key === 'Enter') sendMessage();
-  });
+  // Touch events
+  clippy.on('touchstart', startDrag);
+  clippy.on('touchmove', drag);
+  clippy.on('touchend', endDrag);
 
-  function sendMessage() {
-    const input = document.getElementById('chatInput');
-    const text = input.value.trim();
-    if (text) {
-      if (text.startsWith('/name ')) {
-        const newName = text.slice(6).trim();
-        socket.emit('update', { oldName: currentUser, newName: newName });
-        currentUser = newName;
-      } else {
-        socket.emit('talk', { user: currentUser, text: text });
-      }
-      input.value = '';
+  function startDrag(event) {
+    isDragging = true;
+    startX = event.stageX - clippy.x;
+    startY = event.stageY - clippy.y;
+  }
+
+  function drag(event) {
+    if (isDragging) {
+      clippy.x = event.stageX - startX;
+      clippy.y = event.stageY - startY;
+      nameTag.style.left = `${clippy.x}px`;
+      nameTag.style.top = `${clippy.y - 20}px`;
+      updateSpeechBubblePosition();
     }
   }
 
-  </script>
-  </body>
-  </html>
+  function endDrag() {
+    isDragging = false;
+  }
+
+  stage.addChild(clippy);
+
+  return {
+    clippy,
+    nameTag,
+    speechBubble,
+    speak,
+    updateSpeechBubblePosition
+  };
+}
+
+document.getElementById('loginButton').addEventListener('click', () => {
+  currentUser = document.getElementById('nickname').value;
+  currentRoom = document.getElementById('roomId').value || 'default';
+  if (currentUser && currentRoom) {
+    socket.emit('join', { user: currentUser, room: currentRoom });
+    document.getElementById('loginWindow').style.display = 'none';
+    document.getElementById('chatContainer').style.display = 'flex';
+    const canvas = document.createElement('canvas');
+    canvas.id = 'clippyCanvas';
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight - 50;
+    document.body.insertBefore(canvas, document.body.firstChild);
+    stage = new createjs.Stage("clippyCanvas");
+    createjs.Touch.enable(stage);
+    createjs.Ticker.framerate = 30;
+    createjs.Ticker.addEventListener("tick", stage);
+  }
+});
+
+socket.on('join', (user) => {
+  const position = randomPosition();
+  clippyInstances[user] = createClippy(user, position);
+  clippyInstances[user].clippy.gotoAndPlay("enter");
+});
+
+socket.on('leave', (id) => {
+  if (clippyInstances[id]) {
+    clippyInstances[id].clippy.gotoAndPlay("leave");
+    clippyInstances[id].clippy.on("animationend", function() {
+      stage.removeChild(clippyInstances[id].clippy);
+      clippyInstances[id].nameTag.remove();
+      clippyInstances[id].speechBubble.remove();
+      delete clippyInstances[id];
+    });
+  }
+});
+
+socket.on('talk', (data) => {
+  if (clippyInstances[data.user]) {
+    clippyInstances[data.user].speak(data.text);
+  }
+});
+
+document.getElementById('sendButton').addEventListener('click', sendMessage);
+document.getElementById('chatInput').addEventListener('keypress', (e) => {
+  if (e.key === 'Enter') sendMessage();
+});
+
+function sendMessage() {
+  const input = document.getElementById('chatInput');
+  const text = input.value.trim();
+  if (text) {
+    if (text.startsWith('/name ')) {
+      const newName = text.slice(6).trim();
+      socket.emit('update', { oldName: currentUser, newName: newName });
+      currentUser = newName;
+    } else {
+      socket.emit('talk', { user: currentUser, text: text });
+    }
+    input.value = '';
+  }
+}
+
+window.addEventListener('resize', () => {
+  if (stage) {
+    stage.canvas.width = window.innerWidth;
+    stage.canvas.height = window.innerHeight - 50;
+  }
+});
+
+</script>
+</body>
+</html>
