--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@ body, html {
     width: 32px;
     height: 32px;
     margin-right: 10px;
-    background-image: url('https://win98icons.alexmeub.com/icons/png/error-4.png');
+    background-image: url('https://win98icons.alexmeub.com/icons/png/msg_error-0.png');
     background-size: contain;
     background-repeat: no-repeat;
 }
